--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "express": "^4.15.2",
     "jquery": "^3.2.1",
     "materialize-css": "^0.100.2",
+    "mocha": "^5.0.4",
     "socket.io": "^2.0.4",
     "vue": "^2.5.13"
   }
